# konkurrenttracker

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 3b97768f40b5_create_reports_table.py  473ae69cd520_create_industry_articles_table.py  577af35cae4c_create_geo_mentions_table.py  5d64c8dd6f67_create_financial_reports_table.py  68cbbc3bdb68_create_signals_table.py  8fe1eed5ff14_create_market_tables.py  b3043c8f68f0_create_job_postings_table.py  b8edb6a3cf05_create_company_events_table.py  edd6015c7323_add_external_id_to_company_events.py  f4d42f6003c8_create_competitors_table.py
app/: auth.py  config.py  db.py  main.py  notifications.py  scheduler.py  seed.py
app/analysis/: classifier.py  geo_tracker.py  industry_classifier.py  industry_pulse.py  market_classifier.py  market_trends.py  synthesizer.py
app/api/: admin.py  public.py
app/delivery/: mailer.py
app/jobs/: analyze_weekly.py  deliver_weekly.py  scrape_career_sites.py  scrape_cvr.py  scrape_google_news.py  scrape_jobindex.py  scrape_wayback.py
app/models/: __init__.py  company_event.py  competitor.py  financial_report.py  geo_mention.py  industry_article.py  job_posting.py  market_job_posting.py  market_trend_signal.py  report.py  signal.py
app/reporting/: builder.py  pdf.py
app/scrapers/: base.py  career_sites.py  cvr.py  finance.py  google_news.py  industry_press.py  jobindex.py  market_jobs.py  wayback.py  web_intel.py
config/: distribution.yaml
frontend/: index.html
(+8 files in other folders)
